[gd_scene load_steps=5 format=3 uid="uid://dxt6oemoethnb"]

[ext_resource type="Script" path="res://characterPath.gd" id="1_y1rqx"]
[ext_resource type="Script" path="res://characterBody2D.gd" id="2_vm1fm"]
[ext_resource type="Texture2D" uid="uid://bunh1uwy5mu4k" path="res://images/spiderman.png" id="3_umf88"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nv1db"]
radius = 370.0

[node name="Path2D" type="Path2D"]
script = ExtResource("1_y1rqx")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotates = false
loop = false

[node name="CharacterBody2D" type="CharacterBody2D" parent="PathFollow2D"]
texture_filter = 1
scale = Vector2(0.05, 0.05)
input_pickable = true
script = ExtResource("2_vm1fm")

[node name="Sprite2D" type="Sprite2D" parent="PathFollow2D/CharacterBody2D"]
texture = ExtResource("3_umf88")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/CharacterBody2D"]
shape = SubResource("CircleShape2D_nv1db")

[node name="_Timer_128315" type="Timer" parent="PathFollow2D"]
wait_time = 0.2
one_shot = true

[connection signal="dragCharacter" from="PathFollow2D/CharacterBody2D" to="." method="_on_character_body_2d_drag_character"]
[connection signal="mouse_entered" from="PathFollow2D/CharacterBody2D" to="PathFollow2D/CharacterBody2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PathFollow2D/CharacterBody2D" to="PathFollow2D/CharacterBody2D" method="_on_mouse_exited"]
